[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://EnemyRelated/EnemyFactionPassives/Type_Morphers/GUI/MorphSingleSelectionPane/MorphSingleSelectionPane.tscn" type="PackedScene" id=2]
[ext_resource path="res://EnemyRelated/EnemyFactionPassives/Type_Morphers/GUI/MorphSelectionPanel/MorphSelectionPanel.gd" type="Script" id=3]
[ext_resource path="res://EnemyRelated/EnemyFactionPassives/Type_Morphers/GUI/MorphSingleSelectionPane/Assets/MorphSingleSelectionPane_ConfirmButton_Highlighted.png" type="Texture" id=4]
[ext_resource path="res://EnemyRelated/EnemyFactionPassives/Type_Morphers/GUI/MorphSingleSelectionPane/Assets/MorphSingleSelectionPane_ConfirmButton_Normal.png" type="Texture" id=5]
[ext_resource path="res://EnemyRelated/EnemyFactionPassives/Type_Morphers/GUI/ArrowSliderControl/ArrowSliderControl.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_color = Color( 0.866667, 0.866667, 0.866667, 1 )
font_data = ExtResource( 1 )

[node name="MorphSelectionPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 960, 540 )
custom_constants/margin_top = 9
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 9.0
margin_right = 960.0
margin_bottom = 540.0
custom_constants/separation = 10

[node name="ContentPanel" type="MarginContainer" parent="VBoxContainer"]
margin_left = 40.0
margin_right = 920.0
margin_bottom = 459.0
size_flags_horizontal = 6

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ContentPanel"]
margin_right = 880.0
margin_bottom = 459.0

[node name="TopPanel" type="MarginContainer" parent="VBoxContainer/ContentPanel/VBoxContainer"]
margin_right = 880.0
margin_bottom = 55.0

[node name="MainLabel" type="Label" parent="VBoxContainer/ContentPanel/VBoxContainer/TopPanel"]
margin_right = 880.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "Choose a Card to Destroy (Optional).
The Enemies Keep One of The Remaining."
align = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ContentPanel/VBoxContainer/TopPanel"]
margin_right = 880.0
margin_bottom = 55.0
custom_constants/margin_top = 30

[node name="ArrowSliderControl" parent="VBoxContainer/ContentPanel/VBoxContainer/TopPanel/MarginContainer" instance=ExtResource( 6 )]
margin_top = 30.0
margin_right = 880.0
margin_bottom = 55.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ContentPanel/VBoxContainer"]
margin_top = 59.0
margin_right = 880.0
margin_bottom = 459.0
custom_constants/separation = 20

[node name="MorphSingleSelectionPane01" parent="VBoxContainer/ContentPanel/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_right = 280.0
margin_bottom = 400.0

[node name="MorphSingleSelectionPane02" parent="VBoxContainer/ContentPanel/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 300.0
margin_right = 580.0
margin_bottom = 400.0

[node name="MorphSingleSelectionPane03" parent="VBoxContainer/ContentPanel/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 600.0
margin_right = 880.0
margin_bottom = 400.0

[node name="ConfirmPanel" type="MarginContainer" parent="VBoxContainer"]
margin_top = 469.0
margin_right = 960.0
margin_bottom = 519.0

[node name="ConfirmButton" type="TextureButton" parent="VBoxContainer/ConfirmPanel"]
margin_left = 440.0
margin_right = 520.0
margin_bottom = 50.0
size_flags_horizontal = 6
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )

[connection signal="pressed" from="VBoxContainer/ConfirmPanel/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
